3단계 - 로또(2등) (#3602)
* refactor: 구매 수량이 0인 경우 예외 반환하도록 수정

* refactor: 로또 번호 제약 조건 이동, 번호 범위 유효성 검사 클래스 분리

* refactor: Lotto 가변인자 생성자 제거, 테스트용 팩토리 클래스 추가

* refactor: LottoNumbers > LottoNumberFactory renaming

* refactor: 구매 금액 유효성 검사 클래스 분리

* refactor: 팩토리 생성/matches() 파라미터 타입을 Lotto로 변경

* test: 변수명 수정, 팩토리 메소드 수정

* test: EnumMap 학습 테스트

* feat: 로또 당첨 정보, 수익률계산 책임지는 Prize 추가

* refactor: 결과 출력시 List<LottoNumberDto>와 Prize 사용하도록 리팩토링

* docs: 2단계 피드백 정리 완료

* feat: enum Rank에 2등 정보를 추가

* feat: 보너스 번호 입력 기능 추가

* feat: WinningInfo 클래스 생성, 기능 구현

* refactor: 당첨 결과 출력시 2등 정보 포함하도록 변경

* 주석 제거

* refactor: Prize 멤버 필드 타입 변경, 수익률 테스트 중복 제거

* refactor: WinningInfo renaming, 메소드/테스트 이동 및 추가

* refactor: 사용하지 않는 Lotto value() 제거

* refactor: LottoNumberResponse renaming, 변환 로직 이동

* refactor: Lotto 멤버 필드 타입을 Set으로 변경

* refactor: Prize 생성자 추가, 테스트 수정

* refactor: model에서 DTO 제거, controller에 DTO 변환 메소드 추가

* refactor: method renaming

* test: LottoPaper 여러 로또와 당첨 번호를 비교하도록 변경

* refactor: enum Rank 상태 추가, 중복 메소드 제거

* refactor: LottoNumberResponse 정적 팩토리 메소드 제거